added in cross-env library and unix line ends

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "source.fixAll.eslint": true
   },
   "eslint.validate": ["javascript"],
-  "javascript.suggestionActions.enabled": false
+  "javascript.suggestionActions.enabled": false,
+  "files.eol": "\n"
 }
