--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon -L index.js",
-    "test": "mocha ./tests/**/*.test.js --exit",
+    "server": "cross-env NODE_ENV=development nodemon -L index.js",
+    "test": "cross-env NODE_ENV=test mocha ./tests/**/*.test.js --exit",
     "createDockerEnv": "node ./bin/createDockerEnv.js"
   },
   "author": "",
@@ -16,6 +16,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^8.1.1",
