--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "knex": "^0.21.12",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
+    "objection": "^2.2.3",
     "pg": "^8.5.1",
     "response-time": "^2.3.2",
     "sinon": "^9.2.1",
+    "uuid": "^8.3.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
